--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,8 @@
         <activity
             android:name=".BindingActivity">
         </activity>
+        <activity
+            android:name=".CardTypes">
+        </activity>
     </application>
 </manifest>
