--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'com.google.mlkit:vision-common:16.3.0'
+    implementation 'androidx.camera:camera-core:1.1.0-alpha03'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:16.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+    implementation 'androidx.camera:camera-lifecycle:1.0.1'
+    implementation 'androidx.camera:camera-camera2:1.0.1'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha28'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.2.1'
+
 }
+
+
